--- a/resource/history.txt
+++ b/resource/history.txt
@@ -1,3 +1,6 @@
+v1.7 [2023.04.23]
+- updated OpenSSL code, fixed work with the playlist server
+
 v1.6 [2022.12.28]
 - old API has been removed, new implementation
 
