--- a/resource/history.txt
+++ b/resource/history.txt
@@ -1,3 +1,6 @@
+v1.12 [2025.05.15]
+- updated JSON code in playlist request
+
 v1.11 [2024.12.25]
 - fixed "player" and "hidden" mixed up ini file parameters
 - added Windows 98 compatible OpenSSL libraries (CPU with SSE still required)
